# mos

./: CMakeLists.txt  LICENSE  main.cpp
core/: CMakeLists.txt
core/include/: nodeHost.h
core/src/: core.cpp  main.cpp  node.cpp  queue.cpp
include/: core.h  mos.h  node.h  publisher.h  queue.h  sub_node.h  subscriber.h  topic_subs.h
plugins/t1/: CMakeLists.txt
plugins/t2/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt
src/plugins/t1/: CMakeLists.txt  main.cpp
src/plugins/t2/: CMakeLists.txt  main.cpp
